Changed the object fit to contain to avoid cropping

--- a/sass/includes/_image-block.scss
+++ b/sass/includes/_image-block.scss
@@ -19,7 +19,7 @@
         height: auto;
         margin-left: auto;
         margin-right: auto;
-        object-fit: cover;
+        object-fit: contain;
 
         &--portrait {
             width: auto;
